don't create spark-warehouse directory in unit tests