@@ -29,9 +29,8 @@ class LowVoltageSuite extends FunSuite
         configuration.setAppName ("LowVoltageSuite")
         configuration.setMaster ("local[2]")
         configuration.set ("spark.driver.memory", "2g")
-        configuration.set ("spark.executor.memory", "4g")
-        //configuration.set ("spark.executor.extraJavaOptions", "-XX:+UseCompressedOops")
-        configuration.set ("spark.executor.extraJavaOptions", "-XX:+UseCompressedOops -XX:+PrintGCDetails -XX:+PrintGCTimeStamps")
+        configuration.set ("spark.executor.memory", "2g")
+        configuration.set ("spark.sql.warehouse.dir", "file:///tmp/")
 
         // register CIMReader classes
         configuration.registerKryoClasses (CIMClasses.list)
